# Learny

./: README.md
assets/: styles.css
myapp/: .gitignore  Cargo.toml  Dioxus.toml  chatverlauf.md
myapp/assets/: mathjax-config.js  styles.css
myapp/shared/: Cargo.toml
myapp/shared/src/: lib.rs  models.rs
myapp/src/: app.rs  components.rs  main.rs  sample_card.rs  tauri_api.rs
myapp/src-tauri/: Cargo.toml  tauri.conf.json
myapp/src-tauri/capabilities/: bliet.json  default.json
myapp/src-tauri/icons/: icon.icns
myapp/src-tauri/src/: db.rs  export.rs  export_import.rs  import.rs  lib.rs  main.rs
myapp/src/components/: block_editor.rs  block_view.rs  card_editor.rs  card_list_page.rs  card_view.rs  create_deck.rs  deck_list.rs
tauri-plugin-bliet/: Cargo.toml  README.md  build.rs
tauri-plugin-bliet/android/: build.gradle.kts
tauri-plugin-bliet/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-bliet/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-bliet/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-bliet/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-bliet/examples/vanilla/src-tauri/capabilities/: default.json
tauri-plugin-bliet/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-bliet/permissions/: default.toml
tauri-plugin-bliet/permissions/autogenerated/: reference.md
tauri-plugin-bliet/permissions/autogenerated/commands/: pick-image.toml  pick_archive.toml  pick_image.toml
tauri-plugin-bliet/permissions/schemas/: schema.json
tauri-plugin-bliet/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
