[package]
name = "tauri-plugin-bliet"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-bliet"

[dependencies]
tauri = { version = "2.9.2" }
serde = "1.0"
thiserror = "2"
serde_json = "1"
tauri-plugin-dialog = "2"
oneshot = "0.1"
futures = "*"
shared = { path = "../myapp/shared" }
uuid = { version ="1.19.0" , features = ["v4"] }
base64 = "0.22"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
