[package]
name = "myapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["pascalino"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
shared = { path = "../shared" }
chrono = {version = "*"}
# so muss ich später das plugin crate registrieren:
tauri-plugin-bliet = { path = "../../tauri-plugin-bliet" }
mime_guess = "2.0"
urlencoding = "2.1"
tauri-plugin-dialog = "2"
